--- a/src/view/style/_header.scss
+++ b/src/view/style/_header.scss
@@ -1,8 +1,11 @@
 header{
-  height: 60px;
+  height: 120px;
   background-color: $cor2;
   display: grid;
   grid-template-columns: 2fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding: $marginm;
+
   .logo{
     height: 100%;
     width: 250px;
@@ -10,14 +13,66 @@ header{
     display: flex;
     align-items: center;
   }
+
+  .botao-nav{
+    /* background-color: red; */
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    
+  }
+
   .burger-nav{
-    background-color: red;
+    /* background-color: white; */
     height: 50px;
     width: 50px;
-    .burger-nav{
-      background-color: $cor1;
-      height: 2px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
 
+    .burger{
+      background-color: $cor1;
+      height: 5px; width: 80%;
+
+    }
+  }
+  
+  .barra-pesquisa{
+    grid-column: 1/3;
+    /* border: $bd; */
+
+    form{
+      height: 100%;
+      /* background-color: red; */
+      display: flex;
+      align-items: center;
+
+      input{
+        height: 40px;
+        width: 90%;
+        font-size: 18px;
+        padding-left: 8px;
+        
+        &::placeholder{
+          color: black;
+          font-weight: 400;
+        }
+      }
+      button{
+        background-color: $cor3;
+        box-shadow: none;
+        height: 40px;
+        width: 40px;
+
+        .fas{
+          color: $cor1;
+          font-size: 20px;
+          display: flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
     }
   }
 }
