--- a/src/style/_header.scss
+++ b/src/style/_header.scss
@@ -30,6 +30,7 @@ header{
     flex-direction: column;
     justify-content: space-evenly;
     align-items: center;
+    /* border: $bd; */
 
     .burger{
       background-color: $cor1;
@@ -39,28 +40,32 @@ header{
   }
   
   .barra-pesquisa{
-    grid-column: 1/3;
+    grid-column: 1/4;
     /* border: $bd; */
+    
 
     form{
       height: 100%;
       /* background-color: red; */
       display: flex;
       align-items: center;
+      
 
       input{
         height: 40px;
-        width: 90%;
+        width: 100%;
         font-size: 18px;
         padding-left: 8px;
         transition: 0.3s;
+        background-color: $cor1;
+        border-radius: none !important;
                 
         /* &:focus{
           background-color: rgb(207, 201, 201);
           
         } */
         &:focus::placeholder{
-          color: white;
+          color: $cor1;
         }
         &::placeholder{
           color: $corFonte1;
@@ -83,5 +88,29 @@ header{
         }
       }
     }
+  }
+}
+.genero{
+  padding: $marginm;
+  background-color: $cor2;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 50px;
+  box-shadow: 0px 9px 8px 0px #00000040;
+
+
+  a{
+    text-decoration: none;
+    color: $corFonte1;
+    background-color: $cor1;
+    width: 120px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: $font1;
+    font-weight: 400;
   }
 }
