--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
   <!-- CSS -->
-  <link rel="stylesheet" href="main.css">
+  <link rel="stylesheet" href="style/main.css">
 </head>
 <body>
   <header>
@@ -136,5 +136,5 @@
   </footer>
 
 </body>
-  <script src="main.js"></script>
+  <script src="script/main.js"></script>
 </html>
