interface completa + ajustes

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,84 +12,24 @@
 
       <div class="conteudo-section">
 
-        <div class="conteudo-filho">
+        <a href="/" class="conteudo-filho">
           <div class="apresentacao">
             <img src="img/camisa-1.png" alt="" class="camisa">
           </div>
           <div class="informacoes">
             <p class="titulo-produto">Internacional I 21/22</p>
             <p class="subtitulo-produto">Torcedor</p>
-            <p class="preco">R$69,99</p>
-            <div class="compra">
-              <a href="" class="comprar">COMPRAR</a>
-              <a href="" class="carrinho"><i class="fas fa-shopping-cart"></i></a>
-            </div>
+            <div class="preco">
+              <p class="avista">R$69,99</p>
+              <p class="parcela">3x de R$ 23,35</p>
+            </div>  
           </div>
-        </div>
+        </a>
 
-        <div class="conteudo-filho">
-          <div class="apresentacao">
-            <img src="src/img/camisa-2.png" alt="" class="camisa">
-          </div>
-          <div class="informacoes">
-            <p class="titulo-produto">Chelsea I 21/22</p>
-            <p class="subtitulo-produto">Jogador</p>
-            <p class="preco">R$129,99</p>
-            <div class="compra">
-              <a href="" class="comprar">COMPRAR</a>
-              <a href="" class="carrinho"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="conteudo-filho">
-          <div class="apresentacao">
-            <img src="src/img/camisa-3.png" alt="" class="camisa">
-          </div>
-          <div class="informacoes">
-            <p class="titulo-produto">Brasil I 98/99</p>
-            <p class="subtitulo-produto">Retro</p>
-            <p class="preco">R$129,99</p>
-            <div class="compra">
-              <a href="" class="comprar">COMPRAR</a>
-              <a href="" class="carrinho"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="conteudo-filho">
-          <div class="apresentacao">
-            <img src="src/img/camisa.png" alt="" class="camisa">
-          </div>
-          <div class="informacoes">
-            <p class="titulo-produto">Vasco I 21/22</p>
-            <p class="subtitulo-produto">Torcedor</p>
-            <p class="preco">R$69,99</p>
-            <div class="compra">
-              <a href="" class="comprar">COMPRAR</a>
-              <a href="" class="carrinho"><i class="fas fa-shopping-cart"></i></a>
-            </div>
-          </div>
-        </div>
-
-        
       </div>
 
     </section>
   </main>
-  <footer>
-    <div class="conteudo-logo">
-      <img src="src/img/logo.png" alt="">
-    </div>
-    <div class="informacoes">
-      <li><a href="">Fale conosco</a></li>
-      <li><a href="">Dúvidas e Reclamações</a></li>
-      <li><a href="">Não achou? Faça sua encomenda</a></li>
-    </div>
-    <div class="creditos">
-      <p><a href="https://lucasfelipeluz.github.io/" target="blank">Desenvolvido por Lucas Luz</a></p>
-    </div>
-  </footer>
-
+  <%- include('components/footer') %> 
 </body>
 <%- include('components/foot') %> 
