--- a/views/components/head.ejs
+++ b/views/components/head.ejs
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>La Beca Store</title>
+  <title>La Beca Store<%=pageName == undefined || null ? '' : ` - ${pageName}` %></title>
   
   <!-- font-family: 'IBM Plex Sans Thai Looped', sans-serif;  font-family: 'Recursive', sans-serif; -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
