--- a/views/admin/admin_components/navbar.ejs
+++ b/views/admin/admin_components/navbar.ejs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand navbar-dark bg-primary">
-  <a href="/" class="navbar-brand">
+  <a href="/admin/categories" class="navbar-brand">
     Administração La Beca
   </a>
   <ul class="navbar-nav mr-auto">
