--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -4,8 +4,7 @@
   <div class="container">
     <div class="card mt-3">
       <div class="card-header">
-        <h2>Bem vindo a Administração</h2><br>
-        <h5>O que deseja ver?</h5>
+        <h2>Administração La Beca</h2><br>
       </div>
       <div class="card-body">
         <a href="/admin/categories" class="btn btn-primary btn-lg">Categorias</a>
