ajustes no link

--- a/views/components/footer.ejs
+++ b/views/components/footer.ejs
@@ -5,7 +5,7 @@
   <div class="informacoes">
     <li><a href="">Fale conosco</a></li>
     <li><a href="">Dúvidas e Reclamações</a></li>
-    <li><a href="admin/categories">Não achou? Faça sua encomenda</a></li>
+    <li><a href="admin/">Não achou? Faça sua encomenda</a></li>
   </div>
   <div class="creditos">
     <p><a href="https://lucasfelipeluz.github.io/" target="blank">Desenvolvido por Lucas Luz</a></p>
