Tipos de Material adicionado

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -8,7 +8,7 @@
       </div>
       <div class="card-body">
         <a href="/admin/categories" class="btn btn-primary btn-lg">Categorias</a>
-
+        <a href="/admin/material" class="btn btn-primary btn-lg">Tipos de Matérial</a>
       </div>
     </div>
   </div>
