logica do index terminada

--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -9,6 +9,7 @@
       <div class="card-body">
         <a href="/admin/categories" class="btn btn-primary btn-lg">Categorias</a>
         <a href="/admin/material" class="btn btn-primary btn-lg">Tipos de Matérial</a>
+        <a href="/admin/products" class="btn btn-primary btn-lg">Produtos</a>
       </div>
     </div>
   </div>
