--- a/views/admin/admin_components/navbar.ejs
+++ b/views/admin/admin_components/navbar.ejs
@@ -9,8 +9,8 @@
     <li class="nav-item">
       <a class="nav-link" href="/admin/material">Materiais</a>
     </li>
-    <!-- <li class="nav-item">
-      <a class="nav-link" href="/admin/articles">Artigos</a>
-    </li> -->
+    <li class="nav-item">
+      <a class="nav-link" href="/admin/products">Produtos</a>
+    </li>
   </ul>
 </nav>
