index Products pronto

--- a/views/admin/products/index.ejs
+++ b/views/admin/products/index.ejs
@@ -3,7 +3,7 @@
   <%- include('../admin_components/navbar') %> 
   <div class="container">
     <h2>Produtos</h2>
-    <a class="btn btn-success" href="#">Adicionar mais Produtos</a>
+    <a class="btn btn-success" href="/admin/products/new">Adicionar mais Produtos</a>
     <hr>
     <table class="table table-bordered">
       <thead>
@@ -36,7 +36,8 @@
               </form>
             </td>
           </tr>
-          <% }) %> 
+
+        <% }) %> 
       </tbody>
     </table>
   </div>
